--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -55,4 +55,15 @@
     <string name="text_hygiene">La salud sexual es un aspecto fundamental de nuestro bienestar general, y la higiene desempeña un papel crucial en su mantenimiento. La práctica de buenos hábitos de higiene no solo promueve una sensación de frescura y comodidad, sino que también contribuye significativamente a la prevención de infecciones y enfermedades de transmisión sexual.</string>
     <string name="cleanUs">Cuidemos de nosotros</string>
     <string name="bathroom">Es esencial lavar regularmente las áreas genitales con agua y jabón.</string>
+    <string name="condomKnowledge">Que tenemos que saber en relación con los preservativos?</string>
+    <string name="text_condom">Poner un preservativo correctamente es vital para garantizar su eficacia en la prevención de enfermedades de transmisión sexual (ETS). Para ello, no olvides:</string>
+    <string name="condom_steps">
+&#8226; Verificar la fecha de vencimiento.\n\n&#8226; Guardarlo en un lugar fresco y seco.\n\n&#8226; Usar las manos para abrir el paquete en lugar de objetos afilados. \n\n&#8226;
+        Desenrollarlo correctamente: Al desenrollar el preservativo sobre el pene erecto, asegúrate de hacerlo en la dirección correcta. \n\n&#8226; Usarlo desde el principio hasta el final: El preservativo debe colocarse antes de cualquier contacto genital y debe permanecer en su lugar durante toda la actividad sexual
+    </string>
+    <string name="pills_steps">
+&#8226;  Tomarlas todos los días a la misma hora para garantizar su máxima eficacia. Olvidar una dosis puede disminuir su eficacia\n\n&#8226; Que además reducen el dolor menstrual y regulan el ciclo menstrual, aparte de mejorar el acné. \n\n.&#8226;Pueden haber efectos secundarios, como cambios en el estado de ánimo, sensibilidad en los senos, náuseas, entre otros. Sin embargo, estos efectos suelen disminuir con el tiempo.
+    </string>
+    <string name="pillsTitle">Que tenemos que saber sobre pastillas anticonceptivas?</string>
+    <string name="text_pills">Las pastillas anticonceptivas, también conocidas como \"la píldora\", son uno de los métodos anticonceptivos más utilizados en todo el mundo. Están diseñadas sobretodo para prevenir el embarazo. No olvides: </string>
 </resources>
