[SEXED-005] Relations screen added

--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     </string>
     <string name="pillsTitle">Que tenemos que saber sobre pastillas anticonceptivas?</string>
     <string name="text_pills">Las pastillas anticonceptivas, también conocidas como \"la píldora\", son uno de los métodos anticonceptivos más utilizados en todo el mundo. Están diseñadas sobretodo para prevenir el embarazo. No olvides: </string>
+    <string name="positive_relations_title">Respeto, comunicación y confianza</string>
+    <string name="text_positive_relations">Tener relaciones positivas en el ámbito sexual implica cultivar un ambiente de respeto, comunicación y consentimiento mutuo. Aquí algunos consejos importantes:</string>
+    <string name="relations_advices">&#8226;Respeto Mutuo: Respeta los deseos y límites de tu pareja. No presiones ni fuerces a nadie a realizar acciones que no deseen. \n\n&#8226;Comunicación Abierta: Fomenta un diálogo abierto y honesto con tu pareja sobre deseos, límites y expectativas.\n\n &#8226; Consentimiento: El consentimiento debe ser explícito y voluntario. Ambas partes deben sentirse cómodas y libres para expresar sus límites.</string>
 </resources>
