--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="positive_relationships">Relaciones positivas</string>
     <string name="pills">Pastillas anticonceptivas</string>
     <string name="goTo">Abrir pestaña</string>
-    <string name="vph">VPH</string>
+    <string name="menstruation">Menstruación</string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
@@ -52,7 +52,7 @@
     </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="text_hygiene">La salud sexual es un aspecto fundamental de nuestro bienestar general, y la higiene desempeña un papel crucial en su mantenimiento. La práctica de buenos hábitos de higiene no solo promueve una sensación de frescura y comodidad, sino que también contribuye significativamente a la prevención de infecciones y enfermedades de transmisión sexual.</string>
+    <string name="text_hygiene">La salud sexual es un aspecto fundamental de nuestro bienestar general, y la higiene desempeña un papel crucial en su mantenimiento. La práctica de buenos hábitos de higiene no solo promueve frescura y comodidad, sino que también contribuye significativamente a la prevención de infecciones y enfermedades ETS.</string>
     <string name="cleanUs">Cuidemos de nosotros</string>
     <string name="bathroom">Es esencial lavar regularmente las áreas genitales con agua y jabón.</string>
     <string name="condomKnowledge">Que tenemos que saber en relación con los preservativos?</string>
@@ -69,4 +69,14 @@
     <string name="positive_relations_title">Respeto, comunicación y confianza</string>
     <string name="text_positive_relations">Tener relaciones positivas en el ámbito sexual implica cultivar un ambiente de respeto, comunicación y consentimiento mutuo. Aquí algunos consejos importantes:</string>
     <string name="relations_advices">&#8226;Respeto Mutuo: Respeta los deseos y límites de tu pareja. No presiones ni fuerces a nadie a realizar acciones que no deseen. \n\n&#8226;Comunicación Abierta: Fomenta un diálogo abierto y honesto con tu pareja sobre deseos, límites y expectativas.\n\n &#8226; Consentimiento: El consentimiento debe ser explícito y voluntario. Ambas partes deben sentirse cómodas y libres para expresar sus límites.</string>
+    <string name="compress">Compresas</string>
+    <string name="more_info">Información detallada</string>
+    <string name="delays">Retrasos</string>
+    <string name="text_compress">Es vital que las mujeres estén informadas sobre las compresas y su relación con la salud sexual para garantizar prácticas seguras y mantener una buena higiene.</string>
+    <string name="title_compress">Viaje informativo sobre Compresas y Salud Femenina</string>
+    <string name="compress_steps"> &#8226;Si experimentas molestias, irritación persistente, o tienes preguntas sobre el uso de compresas en relación con tu salud sexual, es recomendable consultar a un profesional de la salud.\n\n&#8226; Las compresas deben cambiarse regularmente para prevenir infecciones.\n\n&#8226; Mantén una buena higiene íntima lavándote regularmente y cambiando las compresas según sea necesario.\n\n&#8226; No se recomienda el uso de compresas durante la actividad sexual, ya que pueden interferir con la lubricación natural y causar incomodidad.  </string>
+    <string name="image_bath_description">Imagen que representa un entorno para cuidar nuestra higiene.</string>
+    <string name="text_delays">"Los retrasos en la menstruación pueden ser causados por una variedad de razones, y es importante abordar este tema con cuidado y acudir a un profesional ante cualquier duda. "</string>
+    <string name="title_delays">Posibles causas para la ausencia de menstruación</string>
+    <string name="menstruation_absence_causes">&#8226;El embarazo es una de las razones más comunes para el retraso en la menstruación. Si hay alguna duda, se recomienda realizar una prueba de embarazo.\n\n &#8226;El estrés emocional y físico. Practicar técnicas para controlar el estrés como ejercicio regular puede ser beneficioso. \n\n&#8226; Los cambios significativos en el peso, ya sea pérdida o aumento.\n\n Ciertas condiciones médicas, como el síndrome de ovario poliquístico (SOP), problemas de tiroides u otras afecciones ginecológicas.</string>
 </resources>
